Stop icon links icon breaking on wrap

--- a/_ltu-components/src/core/scss/_icons.scss
+++ b/_ltu-components/src/core/scss/_icons.scss
@@ -1,4 +1,5 @@
 %icon {
+    display: inline-block;
     position: relative;
     padding-right: 32px;
 
